P01/Tests/SyntaxErrors/statenames2.tm
states 3
A 
B +
C -
D
alphabet 2 0 1

